documentacion/obtenida/ARINC 429/driver and software/LX1553-3/API/L13W32NET.CS

        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardTest1@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardTest1(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardTest2@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardTest2(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardTest3@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CardTest3(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CardTrigger@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CardTrigger(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CFGRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CFGRdL(Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CFGWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CFGWrL(UInt32 value, Int32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdAddr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CmdAddr(Int32 index, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdAlloc@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CmdAlloc(Int32 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdAllocEx@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CmdAllocEx(UInt32 configval, Int32 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdBaseRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CmdBaseRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdBaseWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdBaseWr(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdClear@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CmdClear(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdCountRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_CmdCountRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdCountWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdCountWr(UInt16 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdCtrlRd@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_CmdCtrlRd(Int32 index, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdCtrlWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdCtrlWr(UInt16 ctrlval, Int32 index, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdCurrRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_CmdCurrRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdCurrWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdCurrWr(UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdInit@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdInit(UInt16 opcode, ref UInt16 block);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdInsert@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CmdInsert(ref UInt16 block, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdMaxRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_CmdMaxRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdMaxWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdMaxWr(UInt16 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdRd@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CmdRd(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdShotWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CmdShotWr(Int32 value, Int32 index, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdSkipWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CmdSkipWr(Int32 value, Int32 index, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdStackClr@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdStackClr(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdStartRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_CmdStartRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdStartWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdStartWr(UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdTotalRd@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CmdTotalRd(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdTotalWr@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CmdTotalWr(Int32 countval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CmdWr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CmdWr(ref UInt16 block, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommCall@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CommCall(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommCheck@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CommCheck(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommDisable@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CommDisable(UInt16 command, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommDisableEx@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CommDisableEx(UInt16 command, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommEnable@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CommEnable(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_CommRdL(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommRdsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CommRdsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_CommRdW(UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommRun@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CommRun(ref UInt16 dataptr, UInt16 datacount, ref UInt16 codeptr, UInt16 codecount, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CommWrL(UInt32 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommWrsW@16", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_CommWrsW(ref UInt16 valueptr, UInt32 addrval, UInt16 count, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_CommWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_CommWrW(UInt16 value, UInt32 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DARClr@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DARClr(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DARGet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DARGet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DARRdL@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_DARRdL(UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DARRdW@8", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt16 L13_DARRdW(UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DARSet@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DARSet(UInt16 maskval, UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DARWrL@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DARWrL(UInt32 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DARWrW@12", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern void L13_DARWrW(UInt16 value, UInt16 addrval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescAddr@20", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_DescAddr(Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescAlloc@4", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern UInt32 L13_DescAlloc(UInt32 handleval);
        [DllImport("L13W32.DLL", EntryPoint = "_L13_DescConfig@24", ExactSpelling = true, CharSet = CharSet.Ansi, SetLastError = true)]
        public static extern Int32 L13_DescConfig(UInt32 configval, Int32 mcflag, Int32 taval, Int32 trflag, Int32 saval, UInt32 handleval);
